# trade-analytics-mini

./: .gitignore  README.md  SESSION_SUMMARY.md  coverage.json  pyproject.toml
deliverables/: CLI-001-DESIGN.md  CLI-001-SUMMARY.md  CORE-001-DESIGN.md  CORE-001-SUMMARY.md  CORE-002-DESIGN.md  CORE-002-SUMMARY.md  DOC-001-DESIGN.md  DOC-001-SUMMARY.md  STORE-001-DESIGN.md  STORE-001-SUMMARY.md
docs/: API.md  EXAMPLES.md
scripts/: batch_runner.py  post_sdlc_cleanup.sh  signal_complete.sh  spawn_orchestrator.py  test_file_placement.sh  validate_file_placement.py
scripts/autonomous/: __init__.py  agent_selector.py  cleanup_manager.py  conflict_resolver.py  coordination.py  file_scheduler.py  gates.py  monitor.py  orchestrator_loop.py
scripts/autonomous/tests/: README.md  TEST_REPORT_DESIGN_REVIEW_GATE.md  __init__.py  test_agent_discovery.py  test_batch_runner.py  test_conflict_integration.py  test_conflict_resolver.py  test_coordination.py  test_design_phase.py  test_design_review_gate.py  test_file_scheduler.py  test_gate_skip.py  test_implementation_review_gate.py  test_monitor.py  test_monitoring.py  test_orchestrator_loop.py  test_spawn_orchestrator.py  test_tool_outputs.py
src/trade_analytics/: __init__.py  calculator.py  cli.py  exceptions.py  models.py  storage.py
tasks/: task_queue.json
tests/: __init__.py  conftest.py  test_calculator.py  test_cli.py  test_doc_examples.py  test_models.py  test_storage.py
